# Facial-recognition

./: .editorconfig  .gitignore  .pylintrc  Dockerfile  README.md  access.py  app.py  pyproject.toml  registers.py  render.yaml  requirements.txt
facial-frontend/: access.html  documents.html  index.html  register.html
facial-frontend/assets/: access.js  documents.js  index.js  register.js
src/Facial-recognition/: registers.py
src/facial_recognition/: access.py  app.py  registers.py
