[project]
name = "facial-recognition"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Garcia",email = "ivanjesusgarcia1@gmail.com"},
    {name = "Jose Contreras",email = "contrerasgedler@gmail.com"}

]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "pylint (>=3.3.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
